Sandbox/simpleCoderCppTest/codegen/mex/simpleCppCallfun/build/glnxa64/buildLog.log
[1/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  /home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest/simpleCppFunc.h -o build/glnxa64/simpleCppFunc.o
FAILED: build/glnxa64/simpleCppFunc.o 
/bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  /home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest/simpleCppFunc.h -o build/glnxa64/simpleCppFunc.o
/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest/simpleCppFunc.h:8:1: error: unknown type name ‘using’
 using namespace std;
 ^
/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest/simpleCppFunc.h:8:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘std’
 using namespace std;
                 ^
/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest/simpleCppFunc.h:10:35: error: expected ‘;’, ‘,’ or ‘)’ before ‘&’ token
 void simpleCppFunc(int input, int &output) {
                                   ^
[2/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  rt_nonfinite.c -o build/glnxa64/rt_nonfinite.o
[3/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  /usr/local/MATLAB/R2020a/extern/version/c_mexapi_version.c -o build/glnxa64/c_mexapi_version.o
[4/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  simpleCppCallfun_data.c -o build/glnxa64/simpleCppCallfun_data.o
[5/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  simpleCppCallfun_terminate.c -o build/glnxa64/simpleCppCallfun_terminate.o
[6/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  interface/_coder_simpleCppCallfun_api.c -o build/glnxa64/_coder_simpleCppCallfun_api.o
[7/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  simpleCppCallfun_initialize.c -o build/glnxa64/simpleCppCallfun_initialize.o
[8/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  interface/_coder_simpleCppCallfun_mex.c -o build/glnxa64/_coder_simpleCppCallfun_mex.o
[9/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  simpleCppCallfun.c -o build/glnxa64/simpleCppCallfun.o
simpleCppCallfun.c: In function ‘simpleCppCallfun’:
simpleCppCallfun.c:25:3: warning: implicit declaration of function ‘simpleCppFunc’ [-Wimplicit-function-declaration]
   simpleCppFunc(input, &out);
   ^
[10/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/simpleCoderCppTest" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=simpleCppCallfun_mex -c  interface/_coder_simpleCppCallfun_info.c -o build/glnxa64/_coder_simpleCppCallfun_info.o
ninja: build stopped: subcommand failed.
